@@ -1,3 +1,8 @@
+2010-07-27  Tom Tromey  <tromey@redhat.com>
+
+	* dwarf2loc.c (locexpr_describe_location_piece): Also recognize
+	TLS with DW_OP_const4u or DW_OP_const8u.
+
 2010-07-22  Pedro Alves  <pedro@codesourcery.com>
 
 	* NEWS: Mention target reported shared libraries support by
